--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,33 @@
+:root {
+    --clr-text: #ccc;
+    --clr-text-hover: #eee;
+    --clr-border: #333;
+    --clr-border-hover: #ccc;
+    --clr-border-disabled: #747474;
+}
+
+.light-theme {
+    color-scheme: light light;
+    --clr-text: #333;
+    --clr-text-hover: #535353;
+}
+
+body {
+    position: relative;
+}
+
+.theme-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-20px, 20px);
+    background-color: transparent;
+    border: none;
+    outline: none;
+
+    cursor: pointer;
+}
+
 .container {
     min-height: 100vh;
     display: flex;
@@ -9,7 +39,7 @@
 
 .board-title {
     font-size: 2rem;
-    color: #ccc;
+    color: var(--clr-text);
 }
 
 .board-grid {
@@ -23,7 +53,7 @@
 
     width: 50px;
     height: 50px;
-    border: 3px solid #333;
+    border: 3px solid var(--clr-border);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,11 +65,12 @@
 }
 
 .board-cell:hover {
-    border: 3px solid #ccc;
+    border: 3px solid var(--clr-border-hover);
 }
 
 .board-cell:disabled {
     pointer-events: none;
+    /* border: 3px solid var(--clr-border-disabled); */
 }
 
 .cell-text {
@@ -49,11 +80,11 @@
 .restart-btn {
     background-color: transparent;
     border: none;
-    color: #ccc;
+    color: var(--clr-text);
     cursor: pointer;
     font-size: 1.25rem;
 }
 
 .restart-btn:hover {
-    color: #eee;
+    color: var(--clr-text-hover);
 }
