в зависимости от сложности меняется количество клеток

--- a/src/App.css
+++ b/src/App.css
@@ -29,11 +29,18 @@ body {
     cursor: pointer;
 }
 
-.container {
+.wrapper {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
     gap: 1.5rem;
 }
@@ -45,7 +52,7 @@ body {
 
 .board-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    /* grid-template-columns: repeat(4, 1fr); */
     gap: 0.125rem;
 }
 
